# ViewKit

./: Cargo.toml  Makefile  about.toml  build.rs  memo.md
desgins/: appicon.op  appicon.pen  card.op  card.pen  dock.pen  info_bar.pen  ui.op  ui_example.op  window.pen
docs/: canvas.md
docs/component/: about.md  how-to-create.md
examples/: event_debug.rs  stateful_ui.rs  ui_test.rs
resources/components/: Bar.html  appicon.html  card.html  dock.html  text.html
src/: app.rs  app_runner.rs  catalog.rs  component_dsl.rs  components.rs  font.rs  ipc.rs  lib.rs  libkagami.rs  render.rs  runtime_theme.rs  view.rs  window.rs
src/components/: canvas.rs  card.rs  common.css  container.rs  ext.rs  index.toml  mod.rs  style.rs  view.rs
src/components/button/: index.html  index.htmx  style.css
src/components/card/: index.html  style.css
src/pipeline/: display_list.rs  framebuffer.rs  image.rs  layout.rs  mod.rs  parser.rs  rasterizer.rs  style.rs
