[package]
name = "viewkit"
description = "A UI kit for mochiOS / Kagami"
keywords = ["uikit", "mochios", "viewkit", "ui", "kagami"]
categories = ["gui"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
html5ever = "0.38.0"
markup5ever_rcdom = "0.38.0"
cssparser = "0.37"
toml = "0.8"
# Host PoC dependencies for Wayland wl_shm backend
wayland-client = { version = "0.29", features = ["dlopen"] }
memmap2 = "0.5"
tempfile = "3.6"

[build-dependencies]
html5ever = "0.38.0"
markup5ever_rcdom = "0.38.0"
cssparser = "0.37"
selectors = "0.36.1"
toml = "0.8"

[lib]
name = "viewkit"
path = "src/lib.rs"

[[bin]]
name = "ui_test"
path = "examples/ui_test.rs"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
