[package]
name = "viewkit"
description = "A UI kit for mochiOS / Kagami"
keywords = ["uikit", "mochios", "viewkit", "ui", "kagami"]
categories = ["gui"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
wayland-client = { version = "0.31.14", features = ["dlopen"] }
wayland-protocols = { version = "0.32", features = ["client"] }
memmap2 = "0.9.10"
tempfile = "3.6"
ui_layout = "0.9.8"
fontdue = "0.9.3"

[build-dependencies]

[lib]
name = "viewkit"
path = "src/lib.rs"

[[bin]]
name = "ui_test"
path = "examples/ui_test.rs"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
